--- a/CSS/services-section.css
+++ b/CSS/services-section.css
@@ -68,7 +68,7 @@
 }
 
 #services-section .services-container .panel p {
-    color: #a4a4a4;
+    color: #848484;
     line-height: 1.5; 
     margin-bottom: 50px;
 } 
