--- a/CSS/project-page.css
+++ b/CSS/project-page.css
@@ -49,7 +49,8 @@
 .project_description p {
     color: #1D1D22;
     padding: 0 8px;
-    margin-bottom: 50px
+    margin-bottom: 50px;
+    text-align: left;
 }
 
 .project-btn {
@@ -61,7 +62,7 @@
     -ms-flex-direction: column;
     flex-direction: column; 
     padding: 12px;
-}
+} 
 
 .project-btn .btn {
     background: #000;
