--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -156,13 +156,34 @@
     }
 }
 
+@media only screen and (max-width: 500px) {
+    /*** Top Section ***/
+    .img {
+        width: 350px;
+        height: 350px;
+    }
+    .background-img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 @media only screen and (max-width: 419px) {
+    /*** Top Section ***/
+    .img {
+        width: 300px;
+        height: 350px;
+    }
+    .background-img {
+        width: 100%;
+        height: 100%;
+    }
     /***** Blog Section *****/
     #blog-section .blog-container {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 588px 588px 588px;
-        grid-gap: 20px;
+        grid-template-rows: 500px 500px 500px; 
+        grid-gap: 10px;
         overflow: hidden; 
 }
     #blog-section .blog-container .post {
