--- a/CSS/blog-section.css
+++ b/CSS/blog-section.css
@@ -80,16 +80,16 @@
     line-height: 1.5;
 }
 
-#blog-section .blog-container .post .read-more {
+.read-more {
     position: absolute;
-    bottom: 0;
+    bottom: -15px;
     z-index: 3;
     width: 100%;
     padding-bottom: 15px;
     background: white;
 }
 
-#blog-section .blog-container .post .read-more a {
+.read-more a {
     color:  #ff5253;
     letter-spacing: 1.5px;
     font-weight: 400;
