--- a/CSS/hovereffect.css
+++ b/CSS/hovereffect.css
@@ -19,7 +19,10 @@
 	background-color: rgba(52,63,83,1);
 	color: #fff;
 	-webkit-transition: -webkit-transform 0.35s;
+	-webkit-transition: -webkit-transform 0.4s ease-in-out;
+	transition: -webkit-transform 0.4s ease-in-out;
 	transition: transform 0.4s ease-in-out;
+	transition: transform 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
 	-webkit-transform: translate3d(0,100%,0);
 	transform: translate3d(0,100%,0);
 
@@ -27,11 +30,13 @@
 
 .hovereffect img {
     height: 100%;
-    width: 100%l
+    width: 100%;
     display: block;
     position: relative;
 	-webkit-transition: -webkit-transform 0.35s;
+	transition: -webkit-transform 0.35s;
 	transition: transform 0.35s;
+	transition: transform 0.35s, -webkit-transform 0.35s;
 }
 
 .hovereffect:hover img {
@@ -61,6 +66,7 @@
 	background-color: transparent;
 }
 .hovereffect a.info:hover {
+    -webkit-box-shadow: 0 0 5px #fff;
     box-shadow: 0 0 5px #fff;
 }
 
@@ -79,13 +85,16 @@
 .hovereffect:hover p.icon-links a:hover,
 .hovereffect:hover p.icon-links a:focus {
 	color: #343F53;
+    -webkit-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
 }
 
 .hovereffect h2,
 .hovereffect p.icon-links a {
 	-webkit-transition: -webkit-transform 0.35s;
+	transition: -webkit-transform 0.35s;
 	transition: transform 0.35s;
+	transition: transform 0.35s, -webkit-transform 0.35s;
 	-webkit-transform: translate3d(0,200%,0);
 	transform: translate3d(0,200%,0);
 	visibility: visible;
@@ -155,7 +164,7 @@ body{
   text-align: center;
   height: 100vh;
 }*/
-button {
+/*button {
     background: none; 
   display: inline-block;
   position: relative;
@@ -186,12 +195,14 @@ button:hover::before, button:hover::after {
 }
 button:hover span::before, button:hover span::after {
   height: 100%;
-}
+}*/
 /*----- button 1 -----*/
 .btn-1::before, .btn-1::after {
+  -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
 .btn-1 span::before, .btn-1 span::after {
+  -webkit-transition-delay: 0s;
   transition-delay: 0s;
 }
 .btn-1::before{
@@ -211,9 +222,11 @@ button:hover span::before, button:hover span::after {
   bottom: 0;
 }
 .btn-1:hover::before, .btn-1:hover::after{
+  -webkit-transition-delay: 0s;
   transition-delay: 0s;
 }
 .btn-1:hover span::before, .btn-1:hover span::after{
+  -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
 
@@ -221,9 +234,11 @@ button:hover span::before, button:hover span::after {
 
 
 .btn-2::before, .btn-2::after{
+  -webkit-transition-delay: 0s;
   transition-delay: 0s;
 }
 .btn-2 span::before, .btn-2 span::after{
+  -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
 .btn-2::before{
@@ -243,9 +258,11 @@ button:hover span::before, button:hover span::after {
   bottom: 0;
 }
 .btn-2:hover::before, .btn-2:hover::after{
+  -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
 .btn-2:hover span::before, .btn-2:hover span::after{
+  -webkit-transition-delay: 0s;
   transition-delay: 0s;
 }
 
@@ -254,9 +271,11 @@ button:hover span::before, button:hover span::after {
 .btn-3::after{
   left: 0;
   bottom: 0;
+  -webkit-transition-delay: 0.6s;
   transition-delay: 0.6s;
 }
 .btn-3 span::after{
+  -webkit-transition-delay: 0.4s;
   transition-delay: 0.4s;
   right: 0;
   bottom: 0
@@ -264,24 +283,30 @@ button:hover span::before, button:hover span::after {
 .btn-3::before{
   right: 0;
   top: 0;
+  -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
 .btn-3 span::before{
+  -webkit-transition-delay: 0s;
   transition-delay: 0s;
   left: 0;
   top: 0;
 }
 
 .btn-3:hover::after{
+  -webkit-transition-delay: 0s;
   transition-delay: 0s;
 }
 .btn-3:hover span::after{
+  -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
 .btn-3:hover::before{
+  -webkit-transition-delay: 0.4s;
   transition-delay: 0.4s;
 }
 .btn-3:hover span::before{
+  -webkit-transition-delay: 0.6s;
   transition-delay: 0.6s;
 }
 
@@ -289,21 +314,25 @@ button:hover span::before, button:hover span::after {
 .btn-4::after{
   right:0;
   bottom: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-4 span::after{
   right:0;
   bottom: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-4::before{
   left: 0;
   top: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-4 span::before{
   left: 0;
   top: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 
@@ -311,21 +340,25 @@ button:hover span::before, button:hover span::after {
 .btn-5::after{
   left:0;
   bottom: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-5 span::after{
   right:0;
   top: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-5::before{
   right: 0;
   top: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-5 span::before{
   left: 0;
   bottom: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 
@@ -333,21 +366,25 @@ button:hover span::before, button:hover span::after {
 .btn-6::before{
   left: 50%;
   top: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-6::after{
   left: 50%;
   bottom: 0;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-6 span::before{
   left: 0;
   top: 50%;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-6 span::after{
   right: 0;
   top: 50%;
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 .btn-6:hover::before, .btn-6:hover::after{
@@ -360,11 +397,13 @@ button:hover span::before, button:hover span::after {
 
 
 .middle {
+  -webkit-transition: .5s ease;
   transition: .5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
