--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -18,24 +18,6 @@
 }
 }
 
-@media only screen and (max-width: 811px) {
-    /***** Experience Section *****/
-    #experience-section .experience-container .large-icons .square {
-        position: relative;
-        top: 50px;
-        left: 65px;
-    }
-    #experience-section .experience-container .large-icons .circle {
-        position: relative;
-        top: 100px;
-        left: 65px;
-}
-    #experience-section .experience-container .large-icons .triangle {
-        position: relative;
-        left: 10px;
-    }
-}
-
 @media only screen and (min-width: 769px) {
     /***** Header Navigation *****/
     /*** Mobile Menu ***/
@@ -55,40 +37,11 @@
     }
     
     /***** Services Section *****/
-    #services-section .services-container .panel:hover {
+    .services_panel:hover {
         -webkit-transform: scale(1.0);
         transform: scale(1.0);
 }
-    /***** Testimonieal Section *****/
-    #testimonial-section .testimonial-container {
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        display: grid;
-        grid-gap: 0;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 200px 1fr; 
-    }
     
-    #testimonial-section .testimonial-container .side-image {
-        margin: 10px;
-    }
-    
-    #testimonial-section .testimonial-container .test-left {
-        grid-column: 1 / 2;
-        grid-row: 1 /  2;
-
-    }
-    
-    #testimonial-section .testimonial-container .test-right {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2; 
-
-    }
-    
-    #testimonial-section .testimonial-container .test-center {
-        grid-column: 1 / span 2;
-    }
 }
 
 @media only screen and (max-width: 600px) {
