--- a/CSS/main.css
+++ b/CSS/main.css
@@ -94,12 +94,12 @@ header .menu-btn {
     flex-direction: column;
     padding: 15px;
     position: relative;
-    top: 126px;
+    top: 100px !important;
     width: 100%;
     height: 100vh;
     z-index: 10;
-    -webkit-box-shadow: 1px 13px 45px -14px rgba(0,0,0,0.48);
-    box-shadow: 1px 13px 45px -14px rgba(0,0,0,0.48);
+    -webkit-box-shadow: -2px 9px 8px -9px rgba(0,0,0,0.75);
+    box-shadow: -2px 9px 8px -9px rgba(0,0,0,0.75);
     display: none;
 }
 .mobile-menu.active {
