Changes made to mobile menu.

--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -152,6 +152,9 @@ a {
 .fa-git {
     color: #F05034;
 }
+.fa-github-square {
+    font-size: 1.5em;
+}
 .fa-circle {
     padding: 5px;
     color: #a4a4a4;
