--- a/CSS/main.css
+++ b/CSS/main.css
@@ -75,52 +75,81 @@ header .header-menu a:hover {
 }
 /***** Mobile Menu *****/
 
-header .menu-btn {
-    padding: 20px;
-    font-size: 2em; 
-    font-weight: 700;
-    display: none; 
-    cursor: pointer;
+.mobile_hamburger_menu_container {
+    display: inline-block;
+    cursor: pointer; 
+}
+.mobile_hamburger_menu_container:hover{
+    cursor: pointer; 
 }
 
-.mobile-menu {
-    background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    padding: 15px;
-    position: relative;
-    top: 100px !important;
-    width: 100%;
-    height: 100vh;
-    z-index: 10;
-    -webkit-box-shadow: -2px 9px 8px -9px rgba(0,0,0,0.75);
-    box-shadow: -2px 9px 8px -9px rgba(0,0,0,0.75);
-    display: none;
-}
-.mobile-menu.active {
-    height: 300px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+.bar1,.bar2,.bar3 {
+    width: 35px; 
+    height: 5px; 
+    background-color: #000;
+    margin: 6px 0; 
+    -webkit-transition: .5s ease; 
+    transition: .5s ease; 
 }
 
-.mobile-menu a {
-    padding: 10px 5px;
-    color: #1D1D22;
+.mobile_site_nav {
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    background: #464655;
+    clip-path: circle(0px at top right);
+    transition: clip-path ease-in-out 700ms;
+  /*   display: none; */
+  }
+  
+  .mobile_site_nav--open {
+    clip-path: circle(250% at top right);
+  /*   display: block; */
+  }
+
+  .mobile_site_nav_links {
+    margin: 0;
+    padding: 0;
+  }
+
+  .mobile_site_nav_links a {
+    border-bottom: 1px solid #575766;
+    color: #EBEBD3;
+    display: block;
+    padding: 2em 4em 2em 1.5em;
     text-transform: uppercase;
-    letter-spacing: 2px;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-}
+    text-decoration: none;
+  }
 
-.mobile-menu a:hover {
-    font-weight: 700;
-    -webkit-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
-    box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
-}
+  .mobile_site_nav_links:last-child {
+    border-bottom: none;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
