--- a/CSS/project-page.css
+++ b/CSS/project-page.css
@@ -1,5 +1,5 @@
 .grid-container {
-    margin-top: 80px;
+    margin-top: ;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: repeat(3, 150px); 
@@ -117,7 +117,9 @@
     margin: 5px; 
 }
 
-
+#portfolio_2 {
+    margin: 80px 0;
+}
 
 
 
