--- a/CSS/main.css
+++ b/CSS/main.css
@@ -161,6 +161,7 @@ header {
       font-weight: 500;
       -webkit-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
       box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+      cursor: pointer;
   }
     
     
