--- a/CSS/project-page.css
+++ b/CSS/project-page.css
@@ -1,5 +1,4 @@
 .grid-container {
-    margin-top: ;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: repeat(3, 150px); 
@@ -21,6 +20,10 @@
 
 #portfolio_1 {
     margin-top: 140px; 
+}
+
+.portfolio-project {
+    margin-bottom: 40px;
 }
 
 /* Portfolio Pic */
@@ -89,7 +92,6 @@
 /* Technologies Info */
 .technologies {
     border: 2px solid #a5a5a5 !important;
-     
 }
 .technologies h1 {
     color: #1D1D22;
@@ -117,9 +119,7 @@
     margin: 5px; 
 }
 
-#portfolio_2 {
-    margin: 80px 0;
-}
+
 
 
 
