--- a/CSS/top-section.css
+++ b/CSS/top-section.css
@@ -71,6 +71,8 @@
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
+    -webkit-box-shadow: 0px 0px 13px 0px rgba(105,104,105,1);
+    box-shadow: 0px 0px 13px 0px rgba(105,104,105,1);
     width: 100%;
     max-width: 500px;
     height: 700px;
@@ -96,6 +98,7 @@
 form {
     background: #F9F9F9;
     padding: 25px;
+    -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     width: 100%;
 }
